[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2", "python_devtools"]
build-backend = "scikit_build_core.build"

[project]
name = "spz"
dynamic = ["version"]
description = "Python bindings for SPZ file format library that compiles bindings using nanobind and scikit-build"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy"]
# ---------------------------------------------------------------------------
# Tell scikit-build-core to obtain the dynamic version from CMakeLists:
# ---------------------------------------------------------------------------
[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input    = "CMakeLists.txt"
regex    = 'VERSION[ \t]+(?P<value>[0-9]+\.[0-9]+\.[0-9]+)'

[project.optional-dependencies]
tests = [
    "pytest",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/nianticlabs/spz"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Enable Python bindings for Python package builds
cmake.define.SPZ_BUILD_PYTHON_BINDINGS = "ON"

# Build stable ABI wheels for CPython 3.12+
[tool.scikit-build.wheel]
py-api = "cp312"

[tool.scikit-build.wheel.packages]
spz = "src/python/spz"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"

# UV configuration for package indices
[[tool.uv.index]]
name = "adobeshared-release"
url = "https://artifactory-uw2.adobeitc.com/artifactory/api/pypi/pypi-adobeshared-release/simple"
publish-url = "https://artifactory-uw2.adobeitc.com/artifactory/api/pypi/pypi-adobeshared-release"
authenticate = "always"  # Use .netrc for authentication

[[tool.uv.index]]
name = "tech-transfer-release"
url = "https://artifactory-uw2.adobeitc.com/artifactory/api/pypi/pypi-tech-transfer-3di-release/simple"
publish-url = "https://artifactory-uw2.adobeitc.com/artifactory/api/pypi/pypi-tech-transfer-3di-release"
authenticate = "always"

[[tool.uv.index]]
name = "tech-transfer-dev"
url = "https://artifactory-uw2.adobeitc.com/artifactory/api/pypi/pypi-tech-transfer-3di-dev/simple"
publish-url = "https://artifactory-uw2.adobeitc.com/artifactory/api/pypi/pypi-tech-transfer-3di-dev"
authenticate = "always"

# Configure dependencies to use correct index
# (Add custom sources here if needed)
# [tool.uv.sources]
